# octp-benchmarker

./: octpbenchmarkdata.csv  server.R  ui.R
utils/data/: collect_data.sh
utils/data/octp_all/: 512_100K_0.txt  512_100K_1.txt  512_100K_2.txt  512_100K_3.txt  512_100K_4.txt  512_100K_5.txt  512_100K_6.txt  512_100K_7.txt  512_100K_8.txt  512_100K_9.txt  512_10M_0.txt  512_10M_1.txt  512_10M_2.txt  512_10M_3.txt  512_10M_4.txt  512_10M_5.txt  512_10M_6.txt  512_10M_7.txt  512_10M_8.txt  512_10M_9.txt  512_1M_0.txt  512_1M_1.txt  512_1M_2.txt  512_1M_3.txt  512_1M_4.txt  512_1M_5.txt  512_1M_6.txt  512_1M_7.txt  512_1M_8.txt  512_1M_9.txt  512_25M_0.txt  512_25M_1.txt  512_25M_2.txt  512_25M_3.txt  512_25M_4.txt  512_25M_5.txt  512_25M_6.txt  512_25M_7.txt  512_25M_8.txt  512_25M_9.txt  (+30 more)
utils/data/octp_none/: 512_100K_0.txt  512_100K_1.txt  512_100K_2.txt  512_100K_3.txt  512_100K_4.txt  512_100K_5.txt  512_100K_6.txt  512_100K_7.txt  512_100K_8.txt  512_100K_9.txt  512_10M_0.txt  512_10M_1.txt  512_10M_2.txt  512_10M_3.txt  512_10M_4.txt  512_10M_5.txt  512_10M_6.txt  512_10M_7.txt  512_10M_8.txt  512_10M_9.txt  512_1M_0.txt  512_1M_1.txt  512_1M_2.txt  512_1M_3.txt  512_1M_4.txt  512_1M_5.txt  512_1M_6.txt  512_1M_7.txt  512_1M_8.txt  512_1M_9.txt  512_25M_0.txt  512_25M_1.txt  512_25M_2.txt  512_25M_3.txt  512_25M_4.txt  512_25M_5.txt  512_25M_6.txt  512_25M_7.txt  (+32 more)
utils/parser/: benchmarkdata.h  fileparser.cpp  fileparser.h  filewriter.cpp  filewriter.h  main.cpp
utils/parser/test/: CMakeLists.txt  testbenchmarkdata.cpp  testfileparser.cpp  testfilewriter.cpp
(+280 files in other folders)
